--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/.gitignore
+.idea/encodings.xml
+.idea/misc.xml
+.idea/remote-targets.xml
+.idea/vcs.xml
+
 *.iws
 *.iml
 *.ipr
